--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   <script src="guesser.js"></script>
+  <script src="words.js"></script>
+  
 </head>
 <body>
   <main>
@@ -55,7 +57,6 @@
         <div class="tile" id="53" onclick="tileClick('53')"></div>
         <div class="tile" id="54" onclick="tileClick('54')"></div>
       </div>
-      
       
     </div>
   </main>
