--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
 </head>
 <body>
+  <header>
+    <div>left</div>
+    <div class="title">Wordle</div>
+    <div>right</div>
+  </header>
   <main>
     <div class="board">
       <div class="row" id="0">
@@ -57,8 +62,10 @@
         <div class="tile" id="53" onclick="tileClick('53')"></div>
         <div class="tile" id="54" onclick="tileClick('54')"></div>
       </div>
-      
     </div>
   </main>
+  <div class="keyboard">
+      
+  </div>
 </body>
 </html>
