Adds error messages and fixes another dupe letter bug.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div>right</div>
   </header>
   <main>
+    <div class="error"></div>
     <div class="board">
       <div class="row" id="0">
         <div class="tile" id="00" onclick="tileClick('00')"></div>
