Adds the foundations for menu popups.
Menu popups will be good for additional information, help, and letting
the user know if their word has been determined or not.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div class="title">Wordle</div>
     <div>right</div>
   </header>
+  <div class="stats-wrapper">
+    <div class="stats-board"></div>
+  </div>
   <main>
     <div class="error"></div>
     <div class="board">
