Adds stats board, toggleable after game end with esc.
The end of the game will bring up a stats board, which can be toggled
with the escape button. The toggle is a function so that a close button
can also perform this action.

--- a/index.html
+++ b/index.html
@@ -13,63 +13,63 @@
 
 </head>
 <body>
-  <header>
-    <div>left</div>
-    <div class="title">Wordle</div>
-    <div>right</div>
-  </header>
   <div class="stats-wrapper">
     <div class="stats-board"></div>
   </div>
-  <main>
-    <div class="error"></div>
-    <div class="board">
-      <div class="row" id="0">
-        <div class="tile" id="00" onclick="tileClick('00')"></div>
-        <div class="tile" id="01" onclick="tileClick('01')"></div>
-        <div class="tile" id="02" onclick="tileClick('02')"></div>
-        <div class="tile" id="03" onclick="tileClick('03')"></div>
-        <div class="tile" id="04" onclick="tileClick('04')"></div>
+  <div class="filter">
+    <header>
+      <div>left</div>
+      <div class="title">Wordle</div>
+      <div>right</div>
+    </header>
+    <main>
+      <div class="error"></div>
+      <div class="board">
+        <div class="row" id="0">
+          <div class="tile" id="00" onclick="tileClick('00')"></div>
+          <div class="tile" id="01" onclick="tileClick('01')"></div>
+          <div class="tile" id="02" onclick="tileClick('02')"></div>
+          <div class="tile" id="03" onclick="tileClick('03')"></div>
+          <div class="tile" id="04" onclick="tileClick('04')"></div>
+        </div>
+        <div class="row" id="1">
+          <div class="tile" id="10" onclick="tileClick('10')"></div>
+          <div class="tile" id="11" onclick="tileClick('11')"></div>
+          <div class="tile" id="12" onclick="tileClick('12')"></div>
+          <div class="tile" id="13" onclick="tileClick('13')"></div>
+          <div class="tile" id="14" onclick="tileClick('14')"></div>
+        </div>
+        <div class="row" id="2">
+          <div class="tile" id="20" onclick="tileClick('20')"></div>
+          <div class="tile" id="21" onclick="tileClick('21')"></div>
+          <div class="tile" id="22" onclick="tileClick('22')"></div>
+          <div class="tile" id="23" onclick="tileClick('23')"></div>
+          <div class="tile" id="24" onclick="tileClick('24')"></div>
+        </div>
+        <div class="row" id="3">
+          <div class="tile" id="30" onclick="tileClick('30')"></div>
+          <div class="tile" id="31" onclick="tileClick('31')"></div>
+          <div class="tile" id="32" onclick="tileClick('32')"></div>
+          <div class="tile" id="33" onclick="tileClick('33')"></div>
+          <div class="tile" id="34" onclick="tileClick('34')"></div>
+        </div>
+        <div class="row" id="4">
+          <div class="tile" id="40" onclick="tileClick('40')"></div>
+          <div class="tile" id="41" onclick="tileClick('41')"></div>
+          <div class="tile" id="42" onclick="tileClick('42')"></div>
+          <div class="tile" id="43" onclick="tileClick('43')"></div>
+          <div class="tile" id="44" onclick="tileClick('44')"></div>
+        </div>
+        <div class="row" id="5">
+          <div class="tile" id="50" onclick="tileClick('50')"></div>
+          <div class="tile" id="51" onclick="tileClick('51')"></div>
+          <div class="tile" id="52" onclick="tileClick('52')"></div>
+          <div class="tile" id="53" onclick="tileClick('53')"></div>
+          <div class="tile" id="54" onclick="tileClick('54')"></div>
+        </div>
       </div>
-      <div class="row" id="1">
-        <div class="tile" id="10" onclick="tileClick('10')"></div>
-        <div class="tile" id="11" onclick="tileClick('11')"></div>
-        <div class="tile" id="12" onclick="tileClick('12')"></div>
-        <div class="tile" id="13" onclick="tileClick('13')"></div>
-        <div class="tile" id="14" onclick="tileClick('14')"></div>
-      </div>
-      <div class="row" id="2">
-        <div class="tile" id="20" onclick="tileClick('20')"></div>
-        <div class="tile" id="21" onclick="tileClick('21')"></div>
-        <div class="tile" id="22" onclick="tileClick('22')"></div>
-        <div class="tile" id="23" onclick="tileClick('23')"></div>
-        <div class="tile" id="24" onclick="tileClick('24')"></div>
-      </div>
-      <div class="row" id="3">
-        <div class="tile" id="30" onclick="tileClick('30')"></div>
-        <div class="tile" id="31" onclick="tileClick('31')"></div>
-        <div class="tile" id="32" onclick="tileClick('32')"></div>
-        <div class="tile" id="33" onclick="tileClick('33')"></div>
-        <div class="tile" id="34" onclick="tileClick('34')"></div>
-      </div>
-      <div class="row" id="4">
-        <div class="tile" id="40" onclick="tileClick('40')"></div>
-        <div class="tile" id="41" onclick="tileClick('41')"></div>
-        <div class="tile" id="42" onclick="tileClick('42')"></div>
-        <div class="tile" id="43" onclick="tileClick('43')"></div>
-        <div class="tile" id="44" onclick="tileClick('44')"></div>
-      </div>
-      <div class="row" id="5">
-        <div class="tile" id="50" onclick="tileClick('50')"></div>
-        <div class="tile" id="51" onclick="tileClick('51')"></div>
-        <div class="tile" id="52" onclick="tileClick('52')"></div>
-        <div class="tile" id="53" onclick="tileClick('53')"></div>
-        <div class="tile" id="54" onclick="tileClick('54')"></div>
-      </div>
-    </div>
-  </main>
-  <div class="keyboard">
-      
+    </main>
+    <div class="keyboard"></div>
   </div>
 </body>
 </html>
