--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wordle Best Guess</title>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <link rel="stylesheet" href="style.css">
   <script src="guesser.js"></script>
   <script src="words.js"></script>
@@ -14,7 +14,14 @@
 </head>
 <body>
   <div class="stats-wrapper">
-    <div class="stats-board"></div>
+    <div class="stats-board">
+      <div class="heading">
+        <p class="title"></p>
+        <div class="close" onclick="toggleStatsMenu()"></div>
+      </div>
+      <p class="info" id="i1"></p>
+      <p class="info" id="i2"></p>
+    </div>
   </div>
   <div class="filter">
     <header>
