Word suggestion shows top X number of suggestions.
Based on a configurable parameter, a number of suggested words can be
seen in the left menu.

--- a/index.html
+++ b/index.html
@@ -39,119 +39,7 @@
     <main>
       <div class="error"></div>
       <div class="menu-left">
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-        <div class="block-text-container">
-          <div class="block-text five">S</div>
-          <div class="block-text four">E</div>
-          <div class="block-text three">T</div>
-          <div class="block-text two">A</div>
-          <div class="block-text one">R</div>
-        </div>
-      
+        <p style="color: white">Make a guess to see suggested words!</p>
       </div>
       <div class="board">
         <div class="row" id="0">
