Adds clicking on suggestions to move to board.
Users can now click on a suggested word to move it to the gameboard,
rather than requiring them to type it in manually. Note that the
clicking on both the blocks and block container is disabled after the
stats modal shows up due to its current implementation. This should be
fixed once this is replaced with a box shadow.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
       <div class="error"></div>
       <div class="menu-left">
-        <p style="color: white">Make a guess to see suggested words!</p>
+        <div class="block-text-container"></div>
       </div>
       <div class="board">
         <div class="row" id="0">
